# bench_ipc_tcp

./: CMakeLists.txt  IPC_client.cpp  README.md  README.org  TCP_server_sync.cpp  functions.cmake
doc/: README.org  main.cpp  user-example.cmake
src/: IPC_client.cpp  IPC_server.cpp  TCP_client.cpp  TCP_server_sync.cpp
